--- a/style.css
+++ b/style.css
@@ -64,4 +64,9 @@ footer {
   height: 50px;
   background-color: #aaaaaa;
 }
-@media screen and (max-width: 768px);
+@media screen and (max-width: 768px) {
+  main {
+    width: 100%;
+    display: block;
+  }
+}
