--- a/style.css
+++ b/style.css
@@ -69,4 +69,15 @@ footer {
     width: 100%;
     display: block;
   }
+
+  .step-box {
+    width: 90%;
+    margin: 0 auto;
+    margin-bottom: 20px;
+  }
+
+  .step-box:last-child {
+    margin-bottom: 50px;
+    margin: 0 auto;
+  }
 }
